# llama-cartesi-dapp

./: Cargo.toml  Dockerfile  package-lock.json  package.json  startup.sh
.cargo/: config.toml
src/: index.js  main.rs
