[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
